moved calculation of threshold to avoid issues of it being too big

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: #fff;
+  overflow: hidden;
 }
 
 .swipee-container {
